### ./Cargo.toml

[package]
name = "sudoku"
version = "0.1.0"
authors = ["Your Name <your.name@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"
wee_alloc = { version = "0.4.5", optional = true }
# We will need this crate to shuffle arrays with
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
